modify file names and adding amq scripts

--- a/pgsql/pgsql.yaml
+++ b/pgsql/pgsql.yaml
@@ -201,8 +201,8 @@ parameters:
   name: POSTGRESQL_VERSION
   required: true
   value: "9.6"
-- description: Storage class to use
-  displayName: Storage class name
+- description: Storage Class Name of PVC.
+  displayName: Storage Class Name
   name: STORAGE_CLASS
   required: true
   value: glusterfs-storage
