--- a/ansible/ocp_preq.yaml
+++ b/ansible/ocp_preq.yaml
@@ -1,4 +1,19 @@
 ---
+- hosts: localhost
+  vars_files:
+    - external_vars.yaml
+  tasks:
+  - name: making ssh less connection
+    hosts: "{{ ansible_ssh_host }}"
+    connection: local
+    command: sshpass -p "{{ vm_password }}" ssh-copy-id -o "StrictHostKeyChecking=no" -f "root@{{ item }}"
+    with_items: "{{ hostvars[hostvars.keys()[0]]['groups']['all'] }}"
+    tags: ssh
+    register: out 
+
+  - debug: var=out.stdout_lines
+	tags: ssh
+
 - hosts: all
   vars_files:
     - external_vars.yaml
@@ -46,7 +61,9 @@
     command: docker-storage-setup
     tags: docker
     register: out
+
   - debug: var=out.stdout_lines
+	tags: docker
 
   - name: enable docker service
     command: "{{ item }}"
@@ -56,7 +73,9 @@
       - systemctl is-active docker
     tags: docker
     register: out
+
   - debug: var=out.stdout_lines
+	tags: docker
 
   - name: generating keys
     command: ssh-keygen -t rsa -f /root/.ssh/id_rsa -N ''
@@ -64,11 +83,15 @@
       creates: /root/.ssh/id_rsa
     tags: ssh
     register: out
+
   - debug: var=out.stdout_lines
+    tags: ssh
 
   - name: making ssh less
     command: sshpass -p "{{ vm_password }}" ssh-copy-id -o "StrictHostKeyChecking=no" -f "root@{{ item }}"
     with_items: "{{ play_hosts }}"
     tags: ssh
     register: out
+
   - debug: var=out.stdout_lines
+	tags: ssh
