--- a/ansible/ocp_preq.yaml
+++ b/ansible/ocp_preq.yaml
@@ -11,9 +11,6 @@
     register: out 
     tags: ssh
 
-  - debug: var=out.stdout_lines
-    tags: ssh
-
 - hosts: all
   vars_files:
     - external_vars.yaml
@@ -52,7 +49,8 @@
       state: latest
     tags: yum
 
-  - copy:
+  - name: copy docker content in "/etc/sysconfig/docker-storage-setup"
+    copy:
       content: |
         DEVS={{ docker_device }}
         VG={{ docker_vg }}
@@ -76,9 +74,6 @@
     register: out
     tags: docker
 
-  - debug: var=out.stdout_lines
-    tags: docker
-
   - name: generating keys
     command: ssh-keygen -t rsa -f /root/.ssh/id_rsa -N ''
     args:
@@ -93,7 +88,4 @@
     command: sshpass -p "{{ vm_password }}" ssh-copy-id -o "StrictHostKeyChecking=no" -f "root@{{ item }}"
     with_items: "{{ play_hosts }}"
     register: out
-    tags: ssh
-
-  - debug: var=out.stdout_lines
     tags: ssh
