Add node reboot support in ansible playbook
with this feature now we will be able to reboot our nodes after yum
update

--- a/ansible/ocp_preq.yaml
+++ b/ansible/ocp_preq.yaml
@@ -105,6 +105,18 @@
     tags: ssh
 
   - name: reboot the nodes
-    command: reboot
+    command: /sbin/shutdown -r +1
+    async: 0
+    poll: 0
+    ignore_errors: true
+    when: "reboot"
+    tags: reboot
+
+  - name: wait for the reboot to complete
+    wait_for_connection:
+      connect_timeout: 20
+      sleep: 5
+      delay: 5
+      timeout: 300
     when: "reboot"
     tags: reboot
