--- a/ansible/ocp-preq/config.yml
+++ b/ansible/ocp-preq/config.yml
@@ -6,13 +6,8 @@
       name: ssh-less
     vars:
       password: "{{ vm_password }}"
-      hosts: "{{ groups['nodes'] }}"
-    tags: always
-
-  - name: making ssh less connection from localhost
-    command: sshpass -p "{{ vm_password }}" ssh-copy-id -o \
-        "StrictHostKeyChecking=no" -f "root@{{ item }}"
-    with_items: "{{ groups['nodes'] }}"
+      hosts: "{{ groups['all'] }}"
+      key_gen: False
     tags: always
 
 - hosts: nodes
