--- a/ansible/ocp-preq/roles/docker-setup/tasks/main.yml
+++ b/ansible/ocp-preq/roles/docker-setup/tasks/main.yml
@@ -1,3 +1,16 @@
+- name: 'make sure docker is installed on host machine'
+  command: rpm -q docker
+  register: cmd
+  ignore_errors: True
+  tags: always
+
+- name: 'fail if package docker is not installed'
+  fail:
+    msg: 'rpm docker in not installed on host, 
+    It is reqiured for docker configuration'
+  when: cmd.rc != 0
+  tags: always
+
 - name: 'copy docker content in /etc/sysconfig/docker-storage-setup'
   copy:
     content: |
