Fix fetch directory ansible playbook
Fix the errors in playbook by removing bugs and adding option for
passing hosts via command line.

--- a/ansible/others/fetch-directory.yml
+++ b/ansible/others/fetch-directory.yml
@@ -1,4 +1,7 @@
- hosts: all
+# We can pass hosts, src_server, dest_local via cmd line
+
+---
+- hosts: "{{ hosts | default('all') }}"
   vars:
     src_server: /root/
     dest_local: /root/fetch/
